# project_ODEmodel_CXX

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: etat.h  modele.h  parametres.h  solveur.h
src/: main.cpp  modele.cpp  solveurExplicite.cpp  solveurImplicite.cpp
